# NAREF_Blaise_PASQAL_Hackathon

./: .gitignore  9_sine_grid.csv  BP_hackathon_energy_benchmark_ratios_NAREF.xlsx  Energy_Consumption_Analysis.ipynb  LICENSE  QRCvsCRC.ipynb  README.md  extrapolate.ipynb  plots.ipynb  pyproject.toml  requirements.txt
sine/: .~lock.4_sine_grid.csv#  .~lock.9_sine_grid.csv#  4_sine_grid.csv  9_sine_grid.csv  classical_grid.csv
src/naref/: __init__.py
src/naref/modules/: __init__.py  abstract.py  comp.py  constants.py  dataset.py  demo.py  metrics.py  topology.py
src/naref/modules/classical/: __init__.py  crc.py  hyper.py
src/naref/modules/quantum/: __init__.py  hyper.py  qrc.py
src/naref/results/: 4_sine_grid_lattice_centred.csv  classical_grid.csv
src/naref/simulations/QFIM/: Constant_waveform_grid_1.csv  Constant_waveform_grid_4.csv  Constant_waveform_grid_9.csv
src/naref/simulations/Results/: plots.ipynb
src/naref/simulations/Results/sine/: 4_sine_grid.csv  9_sine_grid.csv
